fixed safari layout bug

--- a/src/Sulu/Bundle/SuluAdminBundle/Resources/public/css/main.css
+++ b/src/Sulu/Bundle/SuluAdminBundle/Resources/public/css/main.css
@@ -88,17 +88,24 @@ input, select {
   padding-right: 0;
 }
 /* line 46, ../scss/modules/layout.scss */
-.content-column #content.no-transitions {
+.content-column #content.no-top-space {
+  padding-top: 0;
+}
+/* line 51, ../scss/modules/layout.scss */
+.content-column.no-transitions {
   -webkit-transition: none;
   -moz-transition: none;
   -o-transition: none;
   transition: none;
 }
-/* line 51, ../scss/modules/layout.scss */
-.content-column #content.no-top-space {
-  padding-top: 0;
+/* line 53, ../scss/modules/layout.scss */
+.content-column.no-transitions #content {
+  -webkit-transition: none;
+  -moz-transition: none;
+  -o-transition: none;
+  transition: none;
 }
-/* line 56, ../scss/modules/layout.scss */
+/* line 58, ../scss/modules/layout.scss */
 .content-column .sulu-app-shrink {
   position: absolute;
   top: 0px;
@@ -115,52 +122,52 @@ input, select {
   font-size: 20px;
   line-height: 32px;
 }
-/* line 71, ../scss/modules/layout.scss */
+/* line 73, ../scss/modules/layout.scss */
 .content-column .sulu-app-shrink .fa-chevron-right {
   padding-left: 3px;
 }
-/* line 74, ../scss/modules/layout.scss */
+/* line 76, ../scss/modules/layout.scss */
 .content-column .sulu-app-shrink .fa-chevron-left {
   padding-right: 3px;
 }
-/* line 79, ../scss/modules/layout.scss */
+/* line 81, ../scss/modules/layout.scss */
 .content-column.max {
   float: none;
   width: auto;
 }
-/* line 84, ../scss/modules/layout.scss */
+/* line 86, ../scss/modules/layout.scss */
 .content-column.fixed {
   width: 900px;
   float: left;
 }
-/* line 88, ../scss/modules/layout.scss */
+/* line 90, ../scss/modules/layout.scss */
 .content-column.fixed.small-fixed {
   width: 480px;
 }
-/* line 90, ../scss/modules/layout.scss */
+/* line 92, ../scss/modules/layout.scss */
 .content-column.fixed.small-fixed #content {
   padding-left: 10px;
   padding-right: 10px;
 }
 
-/* line 98, ../scss/modules/layout.scss */
+/* line 100, ../scss/modules/layout.scss */
 .sidebar-column {
   height: 100%;
   overflow: hidden;
   z-index: 101;
   position: relative;
 }
-/* line 104, ../scss/modules/layout.scss */
+/* line 106, ../scss/modules/layout.scss */
 .sidebar-column.fixed {
   width: 450px;
   float: right;
 }
-/* line 109, ../scss/modules/layout.scss */
+/* line 111, ../scss/modules/layout.scss */
 .sidebar-column.max {
   float: none;
   width: auto;
 }
-/* line 114, ../scss/modules/layout.scss */
+/* line 116, ../scss/modules/layout.scss */
 .sidebar-column.hidden {
   width: 0;
   height: 0;
@@ -168,45 +175,45 @@ input, select {
 }
 
 @media only screen and (max-width: 1010px) {
-  /* line 128, ../scss/modules/layout.scss */
+  /* line 130, ../scss/modules/layout.scss */
   .sidebar-column.fixed {
     width: 0;
     height: 0;
   }
 }
 @media only screen and (max-width: 1200px) {
-  /* line 141, ../scss/modules/layout.scss */
+  /* line 143, ../scss/modules/layout.scss */
   .has-visible-sidebar .content-column.fixed {
     width: 690px;
   }
 }
 @media only screen and (max-width: 990px) {
-  /* line 147, ../scss/modules/layout.scss */
+  /* line 149, ../scss/modules/layout.scss */
   .has-visible-sidebar .content-column.fixed {
     width: 480px;
   }
 }
 @media only screen and (max-width: 780px) {
-  /* line 153, ../scss/modules/layout.scss */
+  /* line 155, ../scss/modules/layout.scss */
   .sidebar-column.max {
     width: 0;
     height: 0;
   }
 
-  /* line 158, ../scss/modules/layout.scss */
+  /* line 160, ../scss/modules/layout.scss */
   .has-visible-sidebar .content-column.fixed {
     float: none;
     width: auto;
     max-width: 900px;
   }
 
-  /* line 165, ../scss/modules/layout.scss */
+  /* line 167, ../scss/modules/layout.scss */
   .sulu-app-shrink {
     display: none;
   }
 }
 @media only screen and (max-width: 950px) {
-  /* line 177, ../scss/modules/layout.scss */
+  /* line 179, ../scss/modules/layout.scss */
   .has-no-visible-sidebar .content-column.fixed {
     float: none;
     width: auto;
@@ -214,7 +221,7 @@ input, select {
   }
 }
 @media only screen and (max-width: 1600px) {
-  /* line 191, ../scss/modules/layout.scss */
+  /* line 193, ../scss/modules/layout.scss */
   .has-visible-sidebar .sidebar-column.fixed + .content-column.fixed {
     float: none;
     width: auto;
